--- a/css/resume.css
+++ b/css/resume.css
@@ -5,32 +5,48 @@
   font-size: 1.5rem;
 }
 
-section.resume-section {
-  padding-top: 5rem !important;
-  padding-bottom: 5rem !important;
-  max-width: 75rem;
-}
-
 .resume-date {
 	font-size: 1.5rem;
 }
 
-section.resume-section .resume-item .resume-date {
-  min-width: none;
-}
-
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   section.resume-section {
+    align-items: center;
     min-height: 100vh;
   }
   section.resume-section .resume-item .resume-date {
     min-width: 18rem;
   }
 }
+.resume-section {
+  padding: 6rem 0;
+}
+
+.resume-section .resume-section-heading {
+  font-size: 2rem;
+  line-height: 2rem;
+  padding-top:2rem;
+  padding-bottom:2rem;
+}
+
+section.resume-section .resume-item .resume-date {
+  min-width: none;
+}
+
+@media (min-width: 992px) {
+  .resume-section .resume-section-heading {
+    font-size: 3rem;
+    line-height: 2.5rem;
+  }
+}
 
 @media (min-width: 992px) {
   section.resume-section {
-    padding-top: 3rem !important;
+    padding-top: 5rem !important;
     padding-bottom: 3rem !important;
   }
+}
+
+.resume-skills {
+  font-style: italic;
 }
