--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -10567,6 +10567,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .page-section .page-section-heading {
+  color: #283959;
   font-size: 2.25rem;
   line-height: 2rem;
 }
