--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -10731,6 +10731,16 @@ a.text-dark:hover, a.text-dark:focus {
   padding-bottom: 6rem;
 }
 
+.masthead-thin {
+  padding-top: calc(4rem + 74px);
+  padding-bottom: 2rem;
+}
+
+.masthead-thin .masthead-thin-heading {
+  font-size: 2.75rem;
+  line-height: 1.75rem;
+}
+
 .masthead .masthead-heading {
   font-size: 2.75rem;
   line-height: 2.75rem;
