Page layout formatting

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -54,11 +54,11 @@
   <header class="masthead-thin bg-primary text-white text-left">
     <div class="container d-flex align-items-left flex-column">
       <!-- Masthead Heading -->
-      <h1 class="masthead-thin-heading">{{ page.title }}</h1>
+      <h1 class="masthead-thin-heading offset-sm-1">{{ page.title }}</h1>
     </div>
   </header>
 
-  <div class="container d-flex align-items-left flex-column">
+  <div class="offset-sm-2">
     {{ content }}
   </div>
 
