--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -51,7 +51,7 @@
   </nav>
 
   <!-- Masthead -->
-  <header class="masthead-thin bg-primary text-white text-left">
+  <header class="masthead-thin bg-primary text-white text-left" style="height: 100vh;">
     <div class="container d-flex align-items-left flex-column">
       <!-- Masthead Heading -->
       <h1 class="masthead-thin-heading offset-sm-1">{{ page.title }}</h1>
@@ -63,7 +63,7 @@
   </div>
 
   <!-- Copyright Section -->
-  <section class="copyright py-4 text-white">
+  <section class="copyright py-4 text-white fixed-bottom">
       <div class="container">
       <div class="row">
       <div class="col-lg-4 ml-auto text-left">
