Remove breaking _layout style

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -51,7 +51,7 @@
   </nav>
 
   <!-- Masthead -->
-  <header class="masthead-thin bg-primary text-white text-left" style="height: 100vh;">
+  <header class="masthead-thin bg-primary text-white text-left">
     <div class="container d-flex align-items-left flex-column">
       <!-- Masthead Heading -->
       <h1 class="masthead-thin-heading offset-sm-1">{{ page.title }}</h1>
