Fix favicon away from index

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,6 +18,9 @@
   <!-- Theme CSS -->
   <link href="../css/freelancer.css" rel="stylesheet">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="img/atom_light.svg">
+
   <!-- JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
