--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -2052,27 +2052,23 @@ pre code {
 }
 
 .form-control::-webkit-input-placeholder {
-  color: #797e88;
   opacity: 1;
 }
 
 .form-control::-moz-placeholder {
-  color: #797e88;
   opacity: 1;
 }
 
 .form-control:-ms-input-placeholder {
-  color: #797e88;
   opacity: 1;
 }
 
 .form-control::-ms-input-placeholder {
-  color: #797e88;
   opacity: 1;
 }
 
 .form-control::placeholder {
-  color: #fff;
+  color: #283959;
   opacity: 1;
 }
 
