Add page margin around copyright area for page layout

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -26,7 +26,8 @@
 
 </head>
 
-<body id="page-top">
+<!-- Start page body, manually add margin for copyright section -->
+<body id="page-top" style="margin-bottom: 3.5rem;">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
